
syntax = "proto3";

package weewar.v1;

import "wasmjs/v1/annotations.proto";
import "weewar/v1/models/models.proto";
import "weewar/v1/models/gameviewerpage.proto";

option go_package = "github.com/panyam/turnengine/games/weewar/gen/go/weewar/v1/services";

service GameViewerPage {
    option (wasmjs.v1.browser_provided) = true;

    // Content update methods
    rpc SetTurnOptionsContent(SetContentRequest) returns (SetContentResponse);

    rpc ShowBuildOptions(ShowBuildOptionsRequest) returns (ShowBuildOptionsResponse);

    rpc SetUnitStatsContent(SetContentRequest) returns (SetContentResponse);

    rpc SetDamageDistributionContent(SetContentRequest) returns (SetContentResponse);

    rpc SetTerrainStatsContent(SetContentRequest) returns (SetContentResponse);

    rpc SetCompactSummaryCard(SetContentRequest) returns (SetContentResponse);

    rpc SetGameState(SetGameStateRequest) returns (SetGameStateResponse);

    // Update game UI metadata (current player, turn counter)
    rpc UpdateGameStatus(UpdateGameStatusRequest) returns (UpdateGameStatusResponse);

    // Incremental update methods
    rpc SetTileAt(SetTileAtRequest) returns (SetTileAtResponse);

    rpc SetUnitAt(SetUnitAtRequest) returns (SetUnitAtResponse);

    rpc RemoveTileAt(RemoveTileAtRequest) returns (RemoveTileAtResponse);

    rpc RemoveUnitAt(RemoveUnitAtRequest) returns (RemoveUnitAtResponse);

    // Visualization command methods
    rpc ShowHighlights(ShowHighlightsRequest) returns (ShowHighlightsResponse);

    rpc ClearHighlights(ClearHighlightsRequest) returns (ClearHighlightsResponse);

    rpc ShowPath(ShowPathRequest) returns (ShowPathResponse);

    rpc ClearPaths(ClearPathsRequest) returns (ClearPathsResponse);

    // Animation methods
    rpc MoveUnit(MoveUnitRequest) returns (MoveUnitResponse);

    rpc ShowAttackEffect(ShowAttackEffectRequest) returns (ShowAttackEffectResponse);

    rpc ShowHealEffect(ShowHealEffectRequest) returns (ShowHealEffectResponse);

    rpc ShowCaptureEffect(ShowCaptureEffectRequest) returns (ShowCaptureEffectResponse);

    // Utility methods
    rpc LogMessage(LogMessageRequest) returns (LogMessageResponse);
}

